# MonsterWar

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
assets/: config.json
assets/data/: enemy_data.json  player_data.json
assets/maps/: level1.tmj
src/: main.cpp
src/engine/audio/: audio_player.cpp  audio_player.h
src/engine/component/: animation_component.h  audio_component.h  collider_component.cpp  collider_component.h  name_component.h  parallax_component.h  physics_component.cpp  physics_component.h  render_component.h  sprite_component.h  tilelayer_component.cpp  tilelayer_component.h  transform_component.cpp  transform_component.h  velocity_component.h
src/engine/core/: config.cpp  config.h  context.cpp  context.h  game_app.cpp  game_app.h  time.cpp  time.h
src/engine/input/: input_manager.cpp  input_manager.h
src/engine/loader/: basic_entity_builder.cpp  basic_entity_builder.h  level_loader.cpp  level_loader.h
src/engine/physics/: collider.h  collision.cpp  collision.h  physics_engine.cpp  physics_engine.h
src/engine/render/: camera.cpp  camera.h  image.h  renderer.cpp  renderer.h  sprite.h  text_renderer.cpp  text_renderer.h
src/engine/resource/: audio_manager.cpp  audio_manager.h  font_manager.cpp  font_manager.h  resource_manager.cpp  resource_manager.h  texture_manager.cpp  texture_manager.h
src/engine/scene/: level_loader.cpp  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/engine/system/: animation_system.cpp  animation_system.h  audio_system.cpp  audio_system.h  fwd.h  movement_system.cpp  movement_system.h  render_system.cpp  render_system.h  ysort_system.cpp  ysort_system.h
src/engine/ui/: ui_button.cpp  ui_button.h  ui_element.cpp  ui_element.h  ui_image.cpp  ui_image.h  ui_interactive.cpp  ui_interactive.h  ui_label.cpp  ui_label.h  ui_manager.cpp  ui_manager.h  ui_panel.cpp  ui_panel.h
src/engine/utils/: alignment.h  event.h  events.h  math.h
src/game/component/: blocked_by_component.h  blocker_component.h  class_name_component.h  enemy_component.h  place_occupied_component.h  player_component.h  stats_component.h  target_component.h  unit_prep_component.h
src/game/data/: entity_blueprint.h  game_stats.h  level_config.cpp  level_config.h  session_data.cpp  ui_config.cpp  ui_config.h  waypoint_node.h
src/game/defs/: constants.h  events.h  tags.h
src/game/factory/: blueprint_manager.cpp  blueprint_manager.h  entity_factory.cpp  entity_factory.h
src/game/loader/: entity_builder_mw.cpp  entity_builder_mw.h
(+41 files in other folders)
